--- a/webpage2.html
+++ b/webpage2.html
@@ -6,11 +6,14 @@
   </head>
   <body>
     <div class="main">
+<div class="">
+
 
 <link rel="stylesheet" href="webpage2.css"text"text/css">
     <h1>  Zubair.Adams</h1>
 < <img src="/home/coder/Desktop/pictures/IMG_20180302_113129.jpg"
       alt="mountain view"class="img0">
+      </div>
       <div class="travels">
 
 
@@ -18,12 +21,14 @@
       <h3>  Toronto</h3>
     <p class="toronto"><img src="/home/coder/Downloads/ice-skating-toronto-5a020bfe13f1290037402f5c.jpg"
            alt="toronto"class="img2">
+<div class="lank">
            Tornto , Canada is one of the most famous hockey cities in the world .
         hockey has become the football of canada and in toronto , hockey has become a
         lifestyle more than a sport.I myself have become a hockey fan over the past year
         .id like to experince the emense love shown by the candians for the sport watch
         world class games , perhaps even train with the players . </p>
   </div>
+</div>
   <div class="Language">
 
 
@@ -60,11 +65,16 @@
         </table>
 </div>
         <h2>historical places in Cape Town</h2>
-<h3>  Long Street</h3>
-<div class="long">
 
+<div class="long">
+<h3>  Long Street</h3>
           <img src="/home/coder/Desktop/pictures/IMG_20180302_114628.jpg" alt=
           "me on long"class="long-street">
+          <div class="longtext">
+
+
+
+
           1.Long Street could be described as the funkiest and loudest street in Cape
            Town, bustling with markets and boerewors
            roll stands during the day and hosting parties of all kinds once the sun sets.
@@ -84,13 +94,17 @@
 
 
         OVERNIGHT? See City Bowl accommodation, in Cape Town
-      </div>
-  <h3>  Bo-Kaap</h3>
-      <div class="bo">
 
+</div>
+      </div>
+
+      <div class="bo">
+  <h3>  Bo-Kaap</h3>
         <p>
         <img src="/home/coder/Desktop/pictures/IMG_20180302_113539.jpg" alt="Bo-Kaap"
         class="img3">
+<div class="bo-ka">
+
 
 
         1.It may be one of the most photographed areas of the Mother City,
@@ -110,17 +124,25 @@
           which showcases local Islamic culture and heritage, was built by Jan de Waal in
            1768,
            and is the oldest house in the area still in its original form.
-
+  </div>
          </p>
+
     </div>
 
-   <h3>  The Castle of good hope</h3>
-        <div class="the">
 
-       <p>
+        <div class="the">
+          <div class="Castle">
+
+
+ <h3>  The Castle of good hope</h3>
+
          <img src="/home/coder/Desktop/pictures/IMG_20180302_120856.jpg" alt=
          "the Castle"class="img4">
-         1.The Castle of good hope is a bastion fort built in the 17th century in Cape
+         </div>
+         <div class="Castle-info">
+
+
+        <p> 1.The Castle of good hope is a bastion fort built in the 17th century in Cape
             Town, South Africa.
           Originally located on the coastline of Table Bay,
           following land reclamation the fort is now located inland.
@@ -129,6 +151,7 @@
            is the oldest existing colonial building in South Africa.</p>
              <p>3.The first stone was laid on 2 January 1666.
              </p>        </p>
+</div>
   </div>
 </div>
   </body>
