--- a/skel.html
+++ b/skel.html
@@ -32,7 +32,7 @@
 
 
   <h1>  Zubair.Adams</h1>
-  < <img src="/home/coder/Downloads/Webp.net-resizeimage (1).jpg"
+  < <img src="skelimg/Webp.net-resizeimage (1).jpg"
   alt=class="im">
 </div>
   <!-- Primary Page Layout
@@ -41,7 +41,7 @@
     <div class="row">
       <h2>  which city</h2>
       <h3>  Toronto</h3>
-    <img src="/home/coder/Downloads/Webp.net-resizeimage.jpg"
+    <img src="skelimg/Webp.net-resizeimage.jpg"
            alt=class="toronto">
 <div class="coloums">
 
@@ -93,7 +93,7 @@
     <h3>  Long Street</h3>
 
     <p>
-    <img src="/home/coder/Downloads/Webp.net-resizeimage (3).jpg" alt=
+    <img src="skelimg/Webp.net-resizeimage (3).jpg" alt=
     "me on long">
     <div class="coloumns">
     1.Long Street could be described as the funkiest and loudest street in Cape
@@ -121,7 +121,7 @@
 </div>
 <div class="container">
   <div class="row">
-    <img src="/home/coder/Downloads/Webp.net-resizeimage (2).jpg" alt="">
+    <img src="skelimg/Webp.net-resizeimage (2).jpg" alt="">
 
     <div class="coloums">1.It may be one of the most photographed areas of the Mother City,
       but brightly painted houses and quaint cobbled streets aren’t
@@ -148,7 +148,7 @@
 <div class="container">
   <div class="row">
 <h3>  The Castle of good hope</h3>
-    <img src="/home/coder/Downloads/Webp.net-resizeimage (4).jpg" alt="">
+    <img src="skelimg/Webp.net-resizeimage (4).jpg" alt="">
 
 
 <div class="coloums">
