--- a/skel.html
+++ b/skel.html
@@ -88,14 +88,22 @@
   </div>
 
 </div>
+
 <div class="container">
+
   <div class="row">
-    <h3>  Long Street</h3>
+
+    <div class="two columns">
+
+<h3>  Long Street</h3>
 
     <p>
     <img src="skelimg/Webp.net-resizeimage (3).jpg" alt=
     "me on long">
-    <div class="coloumns">
+  </div>
+<div class="two columns">
+
+
     1.Long Street could be described as the funkiest and loudest street in Cape
      Town, bustling with markets and boerewors
      roll stands during the day and hosting parties of all kinds once the sun sets.
@@ -115,15 +123,15 @@
 
     OVERNIGHT? See City Bowl accommodation, in Cape Town
     </p>
-  </div>
-  </div>
-
 </div>
-<div class="container">
-  <div class="row">
-    <img src="skelimg/Webp.net-resizeimage (2).jpg" alt="">
+    <div class="two columns">
+      <h3>Bo-Kaap</h3>
 
-    <div class="coloums">1.It may be one of the most photographed areas of the Mother City,
+
+    <img src="skelimg/Webp.net-resizeimage (2).jpg" alt="">
+  </div>
+<div class="two columns">
+      1.It may be one of the most photographed areas of the Mother City,
       but brightly painted houses and quaint cobbled streets aren’t
       the only reasons to visit the Bo Kaap.
        This part of Cape Town is packed full of history and culture.</p>
@@ -143,15 +151,13 @@
 
     </p>
 </div>
-  </div>
-</div>
-<div class="container">
-  <div class="row">
+
+  <div class="two columns">
 <h3>  The Castle of good hope</h3>
-    <img src="skelimg/Webp.net-resizeimage (4).jpg" alt="">
+ <img src="skelimg/Webp.net-resizeimage (4).jpg" alt="">
+  </div>
 
-
-<div class="coloums">
+<div class="two columns">
   <p>1.The Castle of good hope is a bastion fort built in the 17th century in Cape
    Town, South Africa.
  Originally located on the coastline of Table Bay,
@@ -162,6 +168,7 @@
     <p>3.The first stone was laid on 2 January 1666.
     </p>
 </div>
+
   </div>
 
 </div>
