--- a/skel.html
+++ b/skel.html
@@ -32,8 +32,12 @@
 
 
   <h1>  Zubair.Adams</h1>
+  <div class="six columns">
+
+
   < <img src="skelimg/Webp.net-resizeimage (1).jpg"
-  alt=class="im">
+  alt=class="img1">
+  </div>
 </div>
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -41,8 +45,12 @@
     <div class="row">
       <h2>  which city</h2>
       <h3>  Toronto</h3>
+      <div class="six columns">
+
+
     <img src="skelimg/Webp.net-resizeimage.jpg"
            alt=class="toronto">
+</div>
 <div class="coloums">
 
     <p>Tornto , Canada is one of the most famous hockey cities in the world .
