--- a/webpage2.html
+++ b/webpage2.html
@@ -6,14 +6,12 @@
   </head>
   <body>
     <div class="main">
-<div class="">
 
 
 <link rel="stylesheet" href="webpage2.css"text"text/css">
     <h1>  Zubair.Adams</h1>
 < <img src="pictures/IMG_20180302_113126.jpg"
       alt="mountain view"class="img0">
-      </div>
       <div class="travels">
 
 
@@ -65,7 +63,7 @@
         </table>
 </div>
         <h2>historical places in Cape Town</h2>
-
+<div class="hplace">
 <div class="long">
 <h3>  Long Street</h3>
           <img src="pictures/IMG_20180302_114628.jpg" alt=
@@ -94,11 +92,13 @@
 
 
         OVERNIGHT? See City Bowl accommodation, in Cape Town
-
 </div>
-      </div>
+</div>
+
 
       <div class="bo">
+
+
   <h3>  Bo-Kaap</h3>
         <p>
         <img src="pictures/IMG_20180302_113539.jpg" alt="Bo-Kaap"
@@ -124,10 +124,10 @@
           which showcases local Islamic culture and heritage, was built by Jan de Waal in
            1768,
            and is the oldest house in the area still in its original form.
-  </div>
          </p>
+</div>
+</div>
 
-    </div>
 
 
         <div class="the">
@@ -149,8 +149,8 @@
            </p>
              <p>2.Built by the Dutch East India Company between 1666 and 1679, the Castle
            is the oldest existing colonial building in South Africa.</p>
-             <p>3.The first stone was laid on 2 January 1666.
-             </p>        </p>
+             <p>3.The first stone was laid on 2 January 1666.</p>
+</div>
 </div>
   </div>
 </div>
