--- a/webpage2.html
+++ b/webpage2.html
@@ -36,6 +36,8 @@
         learn the Language fluenty .a key aspect to why i choose arabic would be i
         would love to be able to understand the Quraan(islamic sciptures) as apose to just reading with
         out understanding . </p>
+<div class="arab">
+
 
         <style media="screen">
         table, tr ,td, th {border:1px solid black;}
@@ -61,6 +63,7 @@
         </tr>
 
         </table>
+</div>
 </div>
         <h2>historical places in Cape Town</h2>
 <div class="hplace">
