--- a/link.html
+++ b/link.html
@@ -5,11 +5,15 @@
     <title>links</title>
   </head>
     <link rel="stylesheet" href="link.css">
-  <body>
-    <div class="main">
-      <img src="pictures/IMG_20180302_113549.jpg" alt=""class="img1">
+
+  <body >
+<div class="main">
+
+
    <a href="./skel.html">skeleton design</a>
    <a href="./webpage2.html">html&css design</a>
-    </div>
+</div>
+<img src="pictures/IMG_20180302_113549.jpg" alt="img3"
+class="img1">
   </body>
 </html>
