--- a/link.html
+++ b/link.html
@@ -12,7 +12,8 @@
 
    <a href="./skel.html">skeleton design</a>
    <a href="./webpage2.html">html&css design</a>
-</div>
+</div
+
 <img src="pictures/IMG_20180302_113549.jpg" alt="img3"
 class="img1">
   </body>
