--- a/link.html
+++ b/link.html
@@ -10,9 +10,11 @@
 <div class="main">
 
 
-   <a href="./skel.html">skeleton design</a>
-   <a href="./webpage2.html">html&css design</a>
-</div
+<h1>   <a href="./skel.html">skeleton design</a>
+</h1>
+<h1><a href="./webpage2.html">html&css design</a>
+</h1>
+</div>
 
 <img src="pictures/IMG_20180302_113549.jpg" alt="img3"
 class="img1">
