--- a/link.html
+++ b/link.html
@@ -15,8 +15,11 @@
 <h1><a href="./webpage2.html">html&css design</a>
 </h1>
 </div>
+<div class="">
 
 <img src="pictures/IMG_20180302_113549.jpg" alt="img3"
 class="img1">
+<h2>kaapstaad</h2>
+</div>
   </body>
 </html>
