--- a/webpage2.html
+++ b/webpage2.html
@@ -10,14 +10,14 @@
 
 <link rel="stylesheet" href="webpage2.css"text"text/css">
     <h1>  Zubair.Adams</h1>
-< <img src="pictures/IMG_20180302_113126.jpg"
+< <img src="skelimg/Webp.net-resizeimage (1).jpg"
       alt="mountain view"class="img0">
       <div class="travels">
 
 
       <h2>  which city</h2>
       <h3>  Toronto</h3>
-    <p class="toronto"><img src="pictures/ice-skating-toronto-5a020bfe13f1290037402f5c.jpg"
+    <p class="toronto"><img src="skelimg/Webp.net-resizeimage.jpg"
            alt="toronto"class="img2">
 <div class="lank">
            Tornto , Canada is one of the most famous hockey cities in the world .
@@ -70,7 +70,7 @@
 <div class="hplace">
 <div class="long">
 <h3>  Long Street</h3>
-          <img src="pictures/IMG_20180302_114628.jpg" alt=
+          <img src="skelimg/Webp.net-resizeimage (3).jpg" alt=
           "me on long"class="long-street">
           <div class="longtext">
 
@@ -105,7 +105,7 @@
 
   <h3>  Bo-Kaap</h3>
         <p>
-        <img src="pictures/IMG_20180302_113539.jpg" alt="Bo-Kaap"
+        <img src="skelimg/Webp.net-resizeimage (2).jpg" alt="Bo-Kaap"
         class="img3">
 <div class="bo-ka">
 
@@ -140,7 +140,7 @@
 
  <h3>  The Castle of good hope</h3>
 
-         <img src="pictures/IMG_20180302_120856.jpg" alt=
+         <img src="skelimg/Webp.net-resizeimage (4).jpg" alt=
          "the Castle"class="img4">
          </div>
          <div class="Castle-info">
