changes in feed back

--- a/skel.html
+++ b/skel.html
@@ -107,7 +107,7 @@
 
     <p>
     <img src="skelimg/Webp.net-resizeimage (3).jpg" alt=
-    "me on long">
+    "me on long"class="img-bo">
   </div>
 <div class="two columns">
 
@@ -136,7 +136,7 @@
       <h3>Bo-Kaap</h3>
 
 
-    <img src="skelimg/Webp.net-resizeimage (2).jpg" alt="">
+    <img src="skelimg/Webp.net-resizeimage (2).jpg" alt=""class="img-bo">
   </div>
 <div class="two columns">
       1.It may be one of the most photographed areas of the Mother City,
