--- a/webpage2.html
+++ b/webpage2.html
@@ -100,6 +100,8 @@
 </div>
 
 
+
+
       <div class="bo">
 
 
@@ -154,6 +156,7 @@
              <p>2.Built by the Dutch East India Company between 1666 and 1679, the Castle
            is the oldest existing colonial building in South Africa.</p>
              <p>3.The first stone was laid on 2 January 1666.</p>
+</div>
 </div>
 </div>
   </div>
