--- a/skel.html
+++ b/skel.html
@@ -98,12 +98,23 @@
 </div>
 
 <div class="container">
+<div class="row">
+<div class="four columns">
+<h4>long-street</h4>
+</div>
+<div class="row">
+<div class="four columns">
+<h4>bo-kaap</h4>
+</div>
+<div class="row">
+<div class="four columns">
+<h4>the Castle of good hope</h4>
+</div>
+</div>
 
   <div class="row">
 
     <div class="two columns">
-
-<h4>  Long Street</h4>
 
     <p>
     <img src="skelimg/Webp.net-resizeimage (3).jpg" alt=
@@ -133,7 +144,6 @@
     </p>
 </div>
     <div class="two columns">
-      <h4>Bo-Kaap</h4>
 
 
     <img src="skelimg/Webp.net-resizeimage (2).jpg" alt=""class="img-bo">
@@ -161,7 +171,6 @@
 </div>
 
   <div class="two columns">
-<h4>  The Castle of good hope</h4>
  <img src="skelimg/Webp.net-resizeimage (4).jpg" alt="">
   </div>
 
