--- a/webpage2.html
+++ b/webpage2.html
@@ -20,8 +20,8 @@
            alt="toronto"class="img2">
            Tornto , Canada is one of the most famous hockey cities in the world .
         hockey has become the football of canada and in toronto , hockey has become a
-        lifestyle more than a sport.I myself have become a hockey fan over the past year
-        .id like to experince the emense love shown by the candians for the sport watch
+        lifestyle more than a sport.I myself have become a hockey fan over the past year.
+      It like to experince the emense love shown by the candians for the sport watch
         world class games , perhaps even train with the players . </p>
   </div>
   <div class="Language">
@@ -30,9 +30,9 @@
         <h2>  foreign Language </h2>
         <h3>  Arabic</h3>
         <p>I speak some arabic but i am not fluent. thus the reason why i would like to
-        learn the Language fluenty .a key aspect to why i choose arabic would be i
+        learn the Language fluenty. A key aspect to why I choose arabic would be I
         would love to be able to understand the Quraan(islamic sciptures) as apose to just reading with
-        out understanding . </p>
+        out understanding. </p>
 
         <style media="screen">
         table, tr ,td, th {border:1px solid black;}
